--- a/index.html
+++ b/index.html
@@ -15,8 +15,19 @@
   </head>
   <body>
     <div class="card">
-      Jessica Randall London, United Kingdom "Front-end developer and avid
-      reader." GitHub Frontend Mentor LinkedIn Twitter Instagram
+      <div class="image">
+        <img src="assets/images/avatar-jessica.jpeg" alt="profile photo" />
+      </div>
+      <h2>Jessica Randall</h2>
+      <p class="location">London, United Kingdom</p>
+      <p class="bio">"Front-end developer and avid reader."</p>
+      <div class="buttons">
+        <button onclick="" class="button">GitHub</button>
+        <button onclick="" class="button">Frontend Mentor</button>
+        <button onclick="" class="button">LinkedIn</button>
+        <button onclick="" class="button">Twitter</button>
+        <button onclick="" class="button">Instagram</button>
+      </div>
     </div>
   </body>
 </html>
