Seems like I finished

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <p class="location">London, United Kingdom</p>
       <p class="bio">"Front-end developer and avid reader."</p>
       <div class="buttons">
-        <button onclick="" class="button">GitHub</button>
-        <button onclick="" class="button">Frontend Mentor</button>
-        <button onclick="" class="button">LinkedIn</button>
-        <button onclick="" class="button">Twitter</button>
-        <button onclick="" class="button">Instagram</button>
+        <button class="button">GitHub</button>
+        <button class="button">Frontend Mentor</button>
+        <button class="button">LinkedIn</button>
+        <button class="button">Twitter</button>
+        <button class="button">Instagram</button>
       </div>
     </div>
   </body>
